--- a/Final Project/crystals/fire-agate.html
+++ b/Final Project/crystals/fire-agate.html
@@ -76,13 +76,13 @@
         
     <h2>Fire Agate Properties and Uses</h2>
         <ul>
-            <li>Health/Healing: Beneficial in cases of eye problems, increases vitality of the body.</li>
+            <li>Health/Healing: Beneficial in cases of eye problems, increases vitality of the body. Aids digestion and helps with sexual dysfunctions. Used also for treating the central nervous system and eye disorders.</li>
             <li>Love: Aphrodisiac energy, helps attract new lovers and amp up passion in existing relationships.</li>
             <li>Protection: brings positive thinking after a depression, increases attention, hope, and enthusiasm.</li>
             <li>Psychic: Helps repel psychic and emotional vampires. Incredible tool for spiritual awakening. </li>
             <li>The Stone Of: the Shy, integrity, those under pressure</li>
-            <li>Work: Eliminates fear, brings out the best in people. Helps with self-expression</li>
-            <li>Other: Helps for preparing for a big change. </li>
+            <li>Work: Eliminates fear, brings out the best in people. Helps with self-expression. Helps us think of ourselves and not let others' opinions to negatively influence us. Helps us navigate the negative work environment and keeps negative coworkers to themselves so we stay productive and peaceful.</li>
+            <li>Other: Helps for preparing for a big change. Aids mental stamina and focus on our goals, short- or long-term.</li>
         </ul>
         <p><a href="https://moonrisecrystals.com/fire-agate-healing-properties-meaning/">Credit</a>
             <a href="https://www.gemstone7.com/054-fire-agate.html">Credit 2</a>
