--- a/Final Project/crystals/atlantisite.html
+++ b/Final Project/crystals/atlantisite.html
@@ -68,11 +68,20 @@
         
     <h2>Atlantisite Associatons</h2>
         <ul>
-            <li>Chakra: Heart</li>
-            <li></li></ul>
+            <li>Candle Colour: Green, Brown, Yellow</li>
+            <li>Chakra: Heart/Third Eye</li>
+            <li>Element: Earth</li></ul>
         
     <h2>Atlantisite Properties and Uses</h2>
-        <ul></ul>
+        <ul>
+            <li>Children: Gently encourages them to modify inappropriate behaviour.
+            <li>Health/Healing: Beneficial for cellular memory, stress, blood disorders, hypoglycemia, and diabetes. Specifically targets the heart and lungs, keeps the stomach and kidneys healthy, and assists in muscle spasms and menstrual pain. Enhances the healing of debilitating illness, hernias, hypoglycemia, and diabetes, as well as encouraging you to assist in your own physical healing. Heals and balances the sexual and reproductive organs.</li>
+            <li>Mental: Lowers stress, encourages thinking before speaking. Helpful for breaking away from the results of poor choices and/or old wounds. Helps break unhealthy patterns and intsills a more positive approach. Aids in settling disputes. Strengthens feelings of love, compassion, and caring for yourself and others. Helps to clean emotional immaturities and attracts love and money and keep to your promises.</li>
+            <li>Protection: Helps you in reacting to life in a balanced manner. Aids in resolving personal conflicts and promotes an understanding of the situation, which can lead to compromise. Drives out irrational fears.</li>
+            <li>Psychic: Powerful tool for opening the way to the spirit. Attunes your spirit with nature and the serpent energy within the Earth. Assists in keeping true to your ideals and the spiritual world. Encourages you to access and retrieve information about our past lives and innate knowledge. Ideal for those who feel separated from their physical selves.</li>
+        </ul>
+        <p><a href="https://www.healingwithcrystals.net.au/atlantisite.html" target="_blank">Credit</a>
+        </p>
     </div>
     <div class="footer">
         <p>Page put together by Noelle M. Hansen</p>
